# napari-worm-nuclei

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_worm_nuclei/: __init__.py  _widget.py  napari.yaml
src/napari_worm_nuclei/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
